# crypto-assistant

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DEPLOY_COMMANDS.md  README.md  VERCEL_DEPLOYMENT_FIXED.md  docker-compose.backend-postgres.yml  docker-compose.backend.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  sample-portfolio-data.json
backend/: .env.example  Dockerfile  README.md  init_db.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/database/: connection.py  init_db.py  models.py
backend/app/database/migrations/: 001_add_user_auth.sql
backend/app/schemas/: mutations.py  queries.py  schema.py  subscriptions.py  types.py
backend/app/services/: ai_service.py  crypto_api.py  database_service.py  websocket_manager.py
backend/app/utils/: auth.py
deploy/: README.md  deploy-backend-to-oci.sh  deploy-to-oci.sh  quick-fix-mixed-content.md  setup-oci-security-groups.md  setup-ssl.sh  vercel-setup-guide.md
frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: use-dashboard-layout.ts  use-require-auth.ts
scripts/: README.md  check_available_cryptos.py  check_portfolios.py  populate_all_portfolios.sh  populate_sample_data.py  populate_with_available_assets.py  populate_with_transactions.sh  populate_working_portfolios.py  quick_populate.sh  test_asset_creation.py
(+33 files in other folders)
